welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if(!weekday && !vacation) {
		return true
	}
	else(weekday && !vacation) {
		return false
	}
}
